--- a/src/main/resources/templates/edit_hotel.html
+++ b/src/main/resources/templates/edit_hotel.html
@@ -1,10 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<html  xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
-  <title>$Title$</title>
+  <title>Hotel Management System</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+        crossorigin="anonymous">
 </head>
 <body>
-$END$
+
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <!-- Brand -->
+  <a class="navbar-brand" href="#">Hotel Management System</a>
+
+  <!-- Toggler/collapsibe Button -->
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <!-- Navbar links -->
+  <div class="collapse navbar-collapse" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" th:href="@{/hotels}">Hotel Management</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
+<br>
+<br>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
+      <h1 class="text-center"> Update Hotel</h1>
+      <div class="card-body">
+        <form th:action="@{/hotels/{id} (id=${hotel.hotelCode})}" th:object="${hotel}" method="post">
+          <div class="form-group">
+            <label>Hotel Name</label>
+            <input type="text"
+                   name="hotelName"
+                   th:field="*{hotelName}"
+                   placeholder="Enter Hotel Name"
+                   class="form-control">
+          </div>
+          <div class="form-group">
+            <label>Hotel Address</label>
+            <input type="text"
+                   name="address"
+                   th:field="*{address}"
+                   placeholder="Enter Hotel Address"
+                   class="form-control">
+          </div>
+          <div class="form-group">
+            <label>Postal code</label>
+            <input type="text"
+                   name="postCode"
+                   th:field="*{postCode}"
+                   placeholder="Enter Postal Code"
+                   class="form-control">
+          </div>
+
+          <div class="form-group">
+            <label>City</label>
+            <input type="text"
+                   name="city"
+                   th:field="*{city}"
+                   placeholder="Enter city"
+                   class="form-control">
+          </div>
+          <div class="form-group">
+            <label>Country </label>
+            <input type="text"
+                   name="country"
+                   th:field="*{country}"
+                   placeholder="Enter country Name"
+                   class="form-control">
+          </div>
+          <div class="box-footer">
+            <button type="submit" class="btn btn-primary">
+              submit
+            </button>
+          </div>
+        </form>
+
+      </div>
+    </div>
+  </div>
+</div>
 </body>
 </html>
