--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,34 +11,31 @@
         body {
             background-image: url("/login.jpg");
             background-repeat: no-repeat;
-            background-size:100% ;
+            /*background-size:100% ;*/
         }
     </style>
 
 
 </head>
 <body  >
-<div class="container" style="margin: auto ; width: 60%; padding: 10px;  ">
+<div class="container" style="margin: auto ; width: 100%; padding: 10px;  ">
 <div class="container" style="padding: 50px" >
     <h1 style="text-align: center" >User Login</h1>
     <div style="  margin-left: 25%;margin-right:25%;width: 100%;">
     <form class="col-5"  th:action="@{/hotels}" th:object="${hotel}" method="post" >
         <div class="form-group">
-            <label for="inputUserName" >Enter User name</label>
+            <label for="inputUserName" ><b>Enter User name</b></label>
             <input type="text" class="form-control" id="inputUserName"  placeholder="User Name" required th:field="${user.userName}" >
 
 
         </div>
         <div class="form-group">
-            <label for="inputPassword">Enter Password</label>
+            <label for="inputPassword"><b>Enter Password</b></label>
             <input type="password" class="form-control" id="inputPassword" placeholder="Password"  th:field="${user.password}">
-            <small  class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <small  class="form-text text-muted">We'll never share your password with anyone else.</small>
         </div>
 
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
+
         <button type="submit" class="btn btn-primary">Login</button>
     </form>
     </div>
